kyverno/policies/vault/test/test-vault-github-permission-set-annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-github-no-permission-set
  annotations:
    vault.uw.systems/github-credentials: "token-file"
spec:
  containers: [{ name: app, image: alpine }]
---
apiVersion: v1
kind: Pod
metadata:
  name: test-github-invalid-permission-set
  annotations:
    vault.uw.systems/github-credentials: "token-file"
    github.uw.systems/permission-set: "uw_ro'''; -extra-flag"
spec:
  containers: [{ name: app, image: alpine }]
